--- a/res/layout/roster.xml
+++ b/res/layout/roster.xml
@@ -11,4 +11,8 @@
             android:layout_height="wrap_content">
     </ListView>
 
+    <ListView android:id="@android:id/list"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"/>
+
 </LinearLayout> 
