--- a/res/layout/roster.xml
+++ b/res/layout/roster.xml
@@ -5,6 +5,18 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
+    <LinearLayout android:id="@+id/roster_header"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="vertical">
+
+             <TextView android:id="@+id/user_acct"
+                       android:layout_width="150dp"
+                       android:layout_height="60dp"/>
+
+
+    </LinearLayout>
+
     <ListView
             android:id="@+id/rosterlist"
             android:layout_width="match_parent"
