--- a/res/layout/login_screen.xml
+++ b/res/layout/login_screen.xml
@@ -11,23 +11,25 @@
                   android:layout_height="40dp">
 
         <TextView android:id="@+id/username"
-                  android:text="username"
+                  android:text="Username"
+                  android:textColor="#000000"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>
         <EditText android:id="@+id/inputname"
-                  android:layout_width="100dp"
+                  android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
      </LinearLayout>
      <LinearLayout android:id="@+id/pwd_layout"
-                   android:layout_width="match_parent"
+                   android:layout_width="200dp"
                    android:layout_height="40dp">
 
      <TextView android:id="@+id/password"
-                  android:text="password"
+                  android:text="Password"
+                  android:textColor="#000000"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>
         <EditText android:id="@+id/inputpwd"
-                  android:layout_width="100dp"
+                  android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
      </LinearLayout>
 
@@ -35,7 +37,7 @@
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
         <Button android:id="@+id/loginbutton"
-                android:text="Sign In"
+                android:text="Login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="loginClick"/>
