--- a/res/layout/accounts.xml
+++ b/res/layout/accounts.xml
@@ -11,16 +11,25 @@
                     android:orientation="horizontal"
                     android:background="#00BFFF">
 
+
+        <Button android:id="@+id/add_acct_button"
+                android:layout_width="77dp"
+                android:layout_height="60dp"
+                android:text="Add Account"
+                android:background="#009FFF"
+                android:onClick="addAccount"/>
+
         <TextView android:id="@+id/acct_title"
                   android:layout_width="150dp"
-                  android:layout_height="60dp"
-                  android:textColor="#000000"
-                  android:text="User Accounts"/>
+                  android:layout_height="30dp"
+                  android:textColor="#FFFFFF"
+                  android:text="        User Accounts"
+                  android:layout_toRightOf="@+id/add_acct_button"/>
 
         <ImageView android:id="@+id/acct_image"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
-                   android:src="@drawable/images"
+                   android:src="@drawable/accounts_icon"
                    android:layout_alignParentRight="true"/>
     </RelativeLayout>
 
