--- a/res/layout/login_screen.xml
+++ b/res/layout/login_screen.xml
@@ -5,6 +5,18 @@
               android:layout_height="fill_parent"
               android:orientation="vertical"
               android:background="@drawable/logo">
+    <RelativeLayout android:id="@+id/roster_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:background="#00BFFF">
+
+        <TextView android:id="@+id/user_acct"
+                  android:layout_width="77dp"
+                  android:layout_height="60dp"
+                  android:textColor="#000000"
+                  android:text=""/>
+    </RelativeLayout>
 
     <LinearLayout android:id="@+id/uid_layout"
                   android:layout_width="match_parent"
