--- a/res/layout/roster.xml
+++ b/res/layout/roster.xml
@@ -11,17 +11,19 @@
                   android:orientation="horizontal"
                   android:background="#00BFFF">
 
-             <TextView android:id="@+id/user_acct"
-                       android:layout_width="150dp"
-                       android:layout_height="60dp"
-                       android:textColor="#000000"
-                       android:text="User"/>
+
              <Button android:id="@+id/user_acct_button"
-                     android:layout_width="100dp"
-                     android:layout_height="40dp"
+                     android:layout_width="86dp"
+                     android:layout_height="60dp"
+                     android:background="#009FFF"
                      android:text="Accounts"
                      android:onClick="acctClicked"/>
-
+             <TextView android:id="@+id/user_acct"
+                  android:layout_width="77dp"
+                  android:layout_height="60dp"
+                  android:textColor="#000000"
+                  android:text="User"
+                  android:layout_toRightOf="@id/user_acct_button"/>
              <ImageView android:id="@+id/user_image"
                         android:layout_width="100dp"
                         android:layout_height="60dp"
