--- a/res/layout/login_screen.xml
+++ b/res/layout/login_screen.xml
@@ -53,6 +53,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="loginClick"/>
+        <ImageView android:id="@+id/progress"
+                   android:src="@drawable/circle"
+                   android:layout_height="40dp"
+                   android:layout_width="40dp"/>
         <TextView android:id="@+id/status"
                   android:layout_height="wrap_content"
                   android:layout_width="wrap_content"/>
